# AirInterview

Airsquire/: CMakeLists.txt  ReadMe.txt  functions.cpp  header.h  main.cpp
Airsquire/airsquireTask_website/: website_link
Airsquire/airsquireTask_website/website pages/: index.html  table_scene_mug_stereo_textured.html  test33.html  test34.html  test35.html  test46.html  test47.html  test49.html  test50.html  test51.html  test52.html  test53.html
